Finish nav, logo positioning

--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,10 +1,10 @@
 @font-face {
-    font-family: 'OpenSans';
+    font-family: 'OpenSans-Regular';
     font-weight: 400;
-    src: url('./../assets/fonts/Open_Sans/OpenSans-Regular.ttf')  format('truetype'),
+    src: url('./../assets/fonts/Open_Sans/OpenSans-Regular.ttf')  format('truetype');
 }
 @font-face {
-    font-family: 'OpenSans';
+    font-family: 'OpenSans-Bold';
     font-weight: 700;
-    src: url('./../assets/fonts/Open_Sans/OpenSans-Bold.ttf')  format('truetype'),
+    src: url('./../assets/fonts/Open_Sans/OpenSans-Bold.ttf')  format('truetype');
 }
