--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,8 @@
-
+@import './reset.scss';
 @import './fonts';
 @import './header';
 @import './nav';
+@import './body';
 
 
 :root {
@@ -9,7 +10,8 @@
 }
 
 body {
-    max-width: 1920px;  
-    font-family: 'OpenSans', sans-serif;
+    display: grid;
+    justify-content: center;
+    font-family: 'OpenSans-Regular', sans-serif;
     background: var(--main-color);
 }
