add header template

--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -8,3 +8,7 @@
     font-weight: 700;
     src: url('./../assets/fonts/Open_Sans/OpenSans-Bold.ttf')  format('truetype');
 }
+@font-face {
+    font-family: 'Raleway-Medium';
+    src: url('./../assets/fonts/Raleway/Raleway-Medium.ttf')  format('truetype');
+}
