--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -1,7 +1,8 @@
 .nav {
     display: grid;
+    grid-column-gap: 7em;
     grid-template-columns: 240px 1fr;
-    border: 1px solid #333;
+    margin: 0 auto;
     height: 150px;  
     .logo__wrapper {
         align-self:  center;
@@ -9,7 +10,7 @@
             background-repeat: no-repeat;
             background-position: center;
             width: 12em;
-            padding: 10px 20px;
+            margin: 2em;
         }
     }
     .nav__list {
@@ -17,17 +18,18 @@
         flex-direction: row;
         flex-wrap: wrap;
         list-style: none;
-        margin-left: 10em;
+
         .nav__element {
             padding: 0 2rem 0 2rem;
             align-self:  center;
             .nav__link {
                 text-transform: uppercase;
-                font-family: 'OpenSans-Bold';
+                font-family: 'OpenSans-Bold', sans-serif;
                 color: #303030;
                 font-size: 1rem;
                 font-weight: 700;
                 text-decoration: none;
+                transition: all .2s ease-in-out;
 
                 &:hover {
                     color: #4776e6;
