--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -8,7 +8,7 @@
 
         display: grid;
         grid-template-columns: 40% 30%;
-        grid-template-rows: 70vh;
+        grid-template-rows: 80vh;
         grid-gap: 30px 50px;
         align-items: center;
         justify-content: center;
@@ -28,10 +28,10 @@
             .header__heading-text {
                 display: inline-block;
 
-                margin-top: 150px;
+                margin-top: 70px;
                 font-size: 3em;
 
-                padding-bottom: 30px;
+                padding-bottom: 20px;
 
                 &::first-line {
                     padding: 10px; 
@@ -41,6 +41,7 @@
                     font-family: 'Raleway-Bold';
                     
                     display: inline-block;
+                    line-height: 1;
                     
                     &::before {
                         content: "\A";
@@ -52,18 +53,20 @@
             }
             .header__content-text {
                 font-family: 'OpenSans-Regular';
-                line-height: 1.8;
+                line-height: 1.6;
                 font-size: 16px;
+                padding-bottom: 30px;
             }
             
         }
         .header__heading-picture {
+            display: flex;
+            align-content: center;
+            justify-content: center;
 
-            margin: 0 auto;
-            
             .picture__box {
                 img {
-                    
+                    width: 110%;
                 }
             }
         }
