--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -1,9 +1,24 @@
 .button {
+    padding: 20px 25px;
+    background-color: $white;
+    border: 1px solid transparent;
+    border-radius: 15px;
+    text-transform: uppercase;
+    margin: 10px;
+    font-size: 14px;
+    font-family: 'OpenSans-SemiBold';
+    color: $black;
+
+    &:first-of-type {
+        margin-left: 0;
+    }
 
 }
 .button--white {
-
+    background-color: $white;
 }
 .button--blue {
-    
+    background-color: $blue;
+    border: 1px solid $white;
+    color: white;
 }
