--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,7 @@
 @import './reset';
 @import './colors';
 @import './fonts';
+@import './buttons';
 @import './header';
 @import './nav';
 @import './body';
