--- a/src/sass/_patterns.scss
+++ b/src/sass/_patterns.scss
@@ -8,6 +8,8 @@
     grid-template-rows: 150px 1fr; 
     justify-content: center;
     align-content: center;
+    grid-template-columns: 50%;
+    grid-row-gap: 50px;
 
     &:first-of-type {
         
@@ -18,13 +20,14 @@
     justify-content: center;
     grid-gap: 5%;
     
+    
     &:first-of-type {
         grid-template-rows: 60px 70px;
     }
-
-
 }
-
+.column {
+    
+}
 .heading {
     color: $blue;
     font-size: $section-heading;
@@ -35,6 +38,7 @@
     .underline {
         text-align: center;
         position: relative;
+        
 
         &:before {
             content: '';
