Finish complement _topapps-features add all classes

--- a/src/sass/_topapps-features.scss
+++ b/src/sass/_topapps-features.scss
@@ -18,7 +18,11 @@
                         }
                     }
                     .how-it-works__pictures {
-                        
+                        .picture__box {
+                            img {
+                                
+                            }
+                        }
                     }
                 }
             }
