Still work at layout topapps-features.scss & corrent patterns.scss

--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -20,3 +20,7 @@
     font-family: 'OpenSans-SemiBold';
     src: url('/../assets/fonts/OpenSans-SemiBold.ttf')  format('truetype');
 }
+@font-face {
+    font-family: 'OpenSans-Light';
+    src: url('/../assets/fonts/OpenSans-Light.ttf')  format('truetype');
+}
