--- a/src/sass/_patterns.scss
+++ b/src/sass/_patterns.scss
@@ -8,29 +8,20 @@
     grid-template-rows: 150px 1fr; 
     justify-content: center;
     align-content: center;
-    grid-template-columns: 50%;
+    grid-template-columns: 70%;
     grid-row-gap: 50px;
 
-    &:first-of-type {
-        
-    }
+
 }
 .row {
     display: grid;
     justify-content: center;
     grid-gap: 5%;
-    
-    
-    &:first-of-type {
-        grid-template-rows: 60px 70px;
-    }
 }
 .column {
     display: grid;
     justify-content: center;
     grid-gap: 5%;
-
-    grid-template-columns: 1fr 1fr;
 }
 .heading {
     color: $blue;
@@ -82,5 +73,9 @@
     font-family: 'OpenSans-Regular';
     text-align: center;
     line-height: 2;
+    margin: 0 auto;
 
+}
+.--white {
+    color: $white;
 }
