Finish topapps-features layout section

--- a/src/sass/_overview.scss
+++ b/src/sass/_overview.scss
@@ -1,6 +1,7 @@
 .overview__section {
     background-color: $shade-of-white;
     .overview__container {
+        grid-template-rows: 150px 350px;
         .overview__row {
  
             margin-bottom: 50px;
