--- a/src/sass/_patterns.scss
+++ b/src/sass/_patterns.scss
@@ -1,6 +1,6 @@
 .section {
     display: grid;
-    padding: 80px 0 40px 0;
+    padding: 80px 0 100px 0;
 
 }
 .container {
@@ -17,11 +17,13 @@
     display: grid;
     justify-content: center;
     grid-gap: 5%;
+    grid-template-rows: 1fr 1fr;
 }
 .column {
     display: grid;
     justify-content: center;
     grid-gap: 5%;
+    grid-template-columns: 1fr 1fr;
 }
 .heading {
     color: $blue;
