--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,7 @@
 @import './how-it-works';
 @import './topapps-features';
 @import './awesome-screenshots';
+@import './what-people-are-saying';
 
 
 
