add rule of mp4 for webpack

--- a/src/sass/_patterns.scss
+++ b/src/sass/_patterns.scss
@@ -81,3 +81,13 @@
 .--white {
     color: $white;
 }
+
+.circles-box {
+    margin: 0 auto;
+    .dot-alt {
+        color: $blue;
+    }
+    .dot {
+        color: $blue;
+    }
+}
