--- a/src/sass/_what-people-are-saying.scss
+++ b/src/sass/_what-people-are-saying.scss
@@ -14,6 +14,10 @@
             }
         }
         .what-people-are-saying__column {
+            &:last-of-type {
+                grid-template-columns: 1fr;
+                margin: 0 auto;
+            }
             .what-people-are-saying__picture {
                 .picture__box {
                     position: relative;
@@ -39,7 +43,7 @@
                             color: $white;
                             .quotation-mark {
                                 position: absolute;
-                                right: 50%;
+                                right: 47%;
                                 bottom: 20%;
                                 font-size: 3em;
                                 
@@ -63,6 +67,7 @@
                 }
             }
             .what-people-are-saying__circles-box {
+                
                 .dot-alt {
                 }
                 .dot {
