Finish video section

--- a/src/sass/_what-people-are-saying.scss
+++ b/src/sass/_what-people-are-saying.scss
@@ -1,5 +1,6 @@
 .what-people-are-saying__section {
     background-color: $white;
+    padding: 80px 0 80px 0;
     .what-people-are-saying__container {
         .what-people-are-saying___row {
             .what-people-are-saying__heading {
