--- a/src/sass/_our-pricing.scss
+++ b/src/sass/_our-pricing.scss
@@ -15,16 +15,35 @@
         }
     }
     .our-pricing__column {
-        grid-template-columns: 1fr 1.2fr 1fr;
+        grid-template-columns: 1fr 1.3fr 1fr;
+        grid-column-gap: 5%;
+        height: calc(100%);
 
 
         .our-pricing__price-content {
             text-align: center;
             font-size: 1.2em;
             padding-top: 30px;
+            position: relative;
+            background-color: $blue;
+
+            div {
+                position: absolute;
+                top: 0;
+                left: 0;
+
+                height: 100%;
+                width: 100%;
+
+                clip-path: polygon(0 0, 100% 0, 3% 2%, 0% 100%);
+                content: '';
+                z-index: 2;
+
+                background-color: $blue;
+            }
 
             &:nth-of-type(2) {
-                background-color: red;
+                background-color: $white;
                 .our-pricing__price-heading {
                     margin-bottom: 40px;
                 }
@@ -44,6 +63,7 @@
 
             &:first-of-type, &:last-of-type {
                 background-color: $shade-of-white;
+                align-self: center;
 
                 & > h3, p, button {
                     border-bottom: 1px solid $white;
@@ -54,7 +74,7 @@
             .our-pricing__price-heading {
                 padding: 20px 25px;
                 background-color: $white;
-                border: 1px solid transparent;
+                border: 0.5px solid transparent;
                 border-radius: 10px;
                 text-transform: uppercase;
                 margin: 10px auto 20px auto;
