--- a/src/sass/_get-app-now.scss
+++ b/src/sass/_get-app-now.scss
@@ -1,36 +1,138 @@
 .get-app-now__section {
+    background-color: $blue;
+    position: relative;
+
+    &:after {
+        content: '';
+        
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        background-image: url(../assets/images/get-app-now-background-image.png);
+        width: 100%;
+        height: 100%;
+        z-index: 2;
+    }
     .get-app-now__container {
         .get-app-now__row {
             .get-app-now__heading {
                 .get-app-now__underline {
+                    &:before, &:after {
+                       background-color: $white;
+                    }
                     .dots {
-
+                        color: $white;
                     }
                 }
             }
         }
         .get-app-now__column {
-            .app-store-button {
-                i {
+            grid-template-columns: repeat(3, 250px);
+            grid-column-gap: 5%;
 
+            &:last-of-type {
+                grid-template-columns: 0.2fr 1fr;
+                justify-self: center;
+                background-color: rgba($black, 0.3);
+                border: 0.5px solid transparent;
+                border-radius: 10px;
+                padding: 20px 100px;
+            }
+            .app-store-button {
+                padding: 15px 35px;
+                background-color: #000;
+                border: 0.5px solid transparent;
+                border-radius: 10px;
+                text-transform: uppercase;
+                margin: 10px auto 20px auto;
+                width: 200px;
+                font-family: 'OpenSans-Regular';
+                color: $white;
+                position: relative;
+                text-decoration: none;
+
+                display: grid;
+                grid-template-rows: 1fr 1fr;
+                &:last-of-type {
+                    .app-store-button__store {
+                            font-size: 1em;
+                        }
+                }
+                .fa-apple {
+                    font-size: 3em;
+                    transform: translate(40%, -50%);
+                    position: absolute;
+                    top: 50%;
+                }
+                .fa-google-play {
+                    font-size: 3em;
+                    transform: translate(40%, -50%);
+                    position: absolute;
+                    top: 50%;
+                }
+                .fa-windows {
+                    font-size: 3em;
+                    transform: translate(40%, -50%);
+                    position: absolute;
+                    top: 50%;
                 }
                 .app-store-button__text {
+                    text-transform: uppercase;
+                    margin: 0 0 0 40px ;
+                    font-size: .8em;
+                    line-height: 3px;
+                    align-self: center;
 
                 }
                 .app-store-button__store {
-
+                    margin: 0 0 0 40px;
+                    font-size: 1.5em;
+                    font-family: 'OpenSans-Bold';
+                    text-transform: initial;
+                    align-self: center;
                 }
             }
-            .button-apple {
 
+            .get-app-now__description-of-subscribe {
+                display: grid;
+                grid-template-columns: 60px 300px;
+                color: $white;
+                .fa-envelope {
+                    font-size: 2em;
+                    overflow: auto;
+                    align-self: center;
+                }
+                .get-app-now__description-text {
+                    font-size: 1em;
+                    text-transform: uppercase;
+                    align-self: center;
+                }
             }
-            .button-google {
+            .get-app-now__subscribe-form {
+                display: grid;
+                grid-template-columns: 400px 1fr;
+                .get-app-now__input-field {
+                    border: 0.5px solid transparent;
+                    border-top-left-radius: 4px;
+                    border-bottom-left-radius: 4px;
 
+                    width: 400px;
+                    text-indent: 20px;
+                }
+                .get-app-now__subscribe-button {
+                    background-color: $blue;
+                    border: 0.5px solid transparent;
+                    border-top-right-radius: 4px;
+                    border-bottom-right-radius: 4px;
+                    text-transform: uppercase;
+                    width: 170px;
+                    height: 50px;
+                    font-size: 1em;
+                    font-family: 'OpenSans-Regular';
+                    color: $white;
+                }
             }
-            .button-windows {
-                
-            }
-
         }
     }
 }
